New Feature: Adding IDs for users

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
     <h1>Web Sockets</h1>
 
     <div id="ui-messages"></div>
+    <input type="text" id="ui-messages-input" placeholder="enter message">
 
     <script src="script.js"></script>
 </body>
