UI: Changing UI appearances for whenever a user initially joins

--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Sockets</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Web Sockets</h1>
+    <p id="ui-title">Web Sockets</p>
 
     <div id="ui-messages"></div>
     <input type="text" id="ui-messages-input" placeholder="enter message">
