--- a/client/index.html
+++ b/client/index.html
@@ -7,10 +7,18 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <p id="ui-title">Web Sockets</p>
 
-    <div id="ui-messages"></div>
-    <input type="text" id="ui-messages-input" placeholder="enter message">
+    <div id="main-container">
+        <p id="ui-title">Web Sockets</p>
+
+        <label for="ui-room">Enter Room ID:</label>
+        <input type="text" id="ui-room-input" name="room">
+
+        <div id="ui-messages"></div>
+    
+        <label for="ui-messages-input">Enter a message:</label>
+        <input type="text" id="ui-messages-input" placeholder="enter message" name="room">
+    </div>
 
     <script src="script.js"></script>
 </body>
