--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-
     <div id="main-container">
         <p id="ui-title">Web Sockets</p>
+
+        <div>
+            <p id="ui-user-id">User Id:</p>
+            <p id="ui-room-id">Current Room Id: N/A</p>
+        </div>
 
         <label for="ui-room">Enter Room ID:</label>
         <input type="text" id="ui-room-input" name="room">
