Refactor: Turned synchronous messages into real-time document

--- a/client/index.html
+++ b/client/index.html
@@ -18,10 +18,7 @@
         <label for="ui-room-input">Enter Room ID:</label>
         <input type="text" id="ui-room-input" name="room">
         
-        
-        <div id="ui-messages">
-            <input type="text" id="ui-messages-input" placeholder="enter message" name="room">
-        </div>
+        <textarea type="text" id="ui-document" placeholder="enter message"></textarea>
     </div>
 
     <script src="script.js"></script>
